Updated theme details

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,7 +1,7 @@
 /*!
  Theme Name:   Twenty Twenty Child
- Theme URI:    https://rotsenacob.com/twenty-twenty-child/
- Description:  Twenty Twenty Child Theme
+ Theme URI:    https://github.com/webdevsuperfast/twentytwenty-child
+ Description:  Child theme for the Twenty Twenty WordPress theme.
  Author:       Rotsen Mark Acob
  Author URI:   https://rotsenacob.com
  Template:     twentytwenty
